<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>at.campus02.bsd</groupId>
    <artifactId>GroupTask_Cocktail</artifactId>
    <version>1.0-SNAPSHOT</version>

    <url>https://github.com/prambergerpat/GroupTask_Cocktail.git</url>
    <developers>
        <developer>
            <id>Samy-Ulz</id>
            <name>Samuel Ulz</name>
            <email>s54090@edu.campus02.at</email>
            <organization>FH CAMPUS 02</organization>
            <organizationUrl>https://www.campus02.at/wirtschaftsinformatik/en/bachelor/bsd/</organizationUrl>
            <roles>
                <role>Student</role>
            </roles>
            <timezone>Europe/Vienna</timezone>
        </developer>
        <developer>
            <id>prambergerpat</id>
            <name>Patrick Pramberger</name>
            <email>s54469@edu.campus02.at</email>
            <organization>FH CAMPUS 02</organization>
            <organizationUrl>https://www.campus02.at/wirtschaftsinformatik/en/bachelor/bsd/</organizationUrl>
            <roles>
                <role>Student</role>
            </roles>
            <timezone>Europe/Vienna</timezone>
        </developer>
        <developer>
            <id>Ha-nn-a-h</id>
            <name>Hannah Posch</name>
            <email>s54209@edu.campus02.at</email>
            <organization>FH CAMPUS 02</organization>
            <organizationUrl>https://www.campus02.at/wirtschaftsinformatik/en/bachelor/bsd/</organizationUrl>
            <roles>
                <role>Student</role>
            </roles>
            <timezone>Europe/Vienna</timezone>
        </developer>
    </developers>
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.24.3</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.12.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.12.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.12.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>

            <!-- Maven Exec Plugin für das Ausführen der Main-Klasse -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <mainClass>at.campus02.bsd.Main</mainClass>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.3</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.21.0</version>
            </plugin>
            <!-- generate information about test coverage -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.12</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <plugins>
            <!-- maven site for documentation -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.9.0</version>
            </plugin>

            <!-- Java Doc within Maven Site Documentation-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.2</version>
                <configuration>
                    <!-- Disable JavaDoc warnings -->
                    <additionalJOption>-Xdoclint:none</additionalJOption>
                </configuration>
            </plugin>

            <!-- Test Coverage from JaCoCo Plugin integration in Maven Site Documentation -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.12</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <!-- select non-aggregate reports -->
                            <report>report</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>

</project>